test_suite/tests/ui/fail/invalid_arg_count_in_type/invalid_option_type_max.rs
use clapi::macros::*;

#[command]
#[option(value, max=2)]
fn test(value: i64){}

fn main(){}