test_suite/tests/ui/fail/invalid_arg_count_in_type/invalid_option_type_max.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_type_max.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: invalid number of arguments for `value : i64` expected 1
